syntax = "proto3";
package DomainServices.HouseholdService;
option csharp_namespace = "DomainServices.HouseholdService.Contracts";

message DeleteHouseholdRequest {
    int32 HouseholdId = 1;

    bool HardDelete = 2;
}